[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "daisy"
version = "0.1.0"
description = "Daisy BMI Python bindings"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Hendrik Kok" }
]

# This ensures setuptools finds your package
[tool.setuptools.packages.find]
where = ["src"]
include = ["daisy*"]

# Include compiled binaries in the package
[tool.setuptools.package-data]
"daisy" = ["*.pyd", "*.dll"]
